--- a/Natthanita/port2.html
+++ b/Natthanita/port2.html
@@ -208,7 +208,7 @@ body, html {
      <br>
     </span> Thank you for reading!</span>
     <br>
-    <a href="../all.html" class="btn" id="backBtn">ย้อนกลับ</a>
+    <a href="../index.html" class="btn" id="backBtn">ย้อนกลับ</a>
   </div>
 </div>
 
